--- a/priv/templates/rclex.gen.msgs/msg_c.eex
+++ b/priv/templates/rclex.gen.msgs/msg_c.eex
@@ -72,7 +72,7 @@ ERL_NIF_TERM <%= function_prefix %>_set(ErlNifEnv *env, int argc, const ERL_NIF_
   void **ros_message_pp;
   if (!enif_get_resource(env, argv[0], rt_ros_message, (void **)&ros_message_pp))
     return enif_make_badarg(env);
-
+<%= if not is_empty_type? do %>
   <%= c_type %> *message_p = (<%= c_type %> *)*ros_message_pp;
 
   int arity;
@@ -80,7 +80,7 @@ ERL_NIF_TERM <%= function_prefix %>_set(ErlNifEnv *env, int argc, const ERL_NIF_
   if (!enif_get_tuple(env, argv[1], &arity, &tuple)) return enif_make_badarg(env);
 
 <%= set_fun_fragments %>
-
+<% end %>
   return atom_ok;
 }
 
@@ -90,9 +90,9 @@ ERL_NIF_TERM <%= function_prefix %>_get(ErlNifEnv *env, int argc, const ERL_NIF_
   void **ros_message_pp;
   if (!enif_get_resource(env, argv[0], rt_ros_message, (void **)&ros_message_pp))
     return enif_make_badarg(env);
-
+<%= if not is_empty_type? do %>
   <%= c_type %> *message_p = (<%= c_type %> *)*ros_message_pp;
-
+<% end %>
 <%= get_fun_fragments %>
 }
 // clang-format on
